# pytket-aqt

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  _metadata.py  dev-requirements.txt  dev-tool-requirements.txt  mypy.ini  noxfile.py  pyproject.toml  ruff.toml  setup.py
.github/: dependabot.yml
.github/workflows/: all-checks.yml  build-test  build_and_test.yml  docs.yml  issue.yml  lint.yml  nox-session.yml  release.yml  tests.yml
.github/workflows/docs/: build-docs  conf.py  requirements.txt
.github/workflows/linting/: lint-requirements.txt
docs/: api.rst  build-docs  build-docs.sh  changelog.rst  conf.py  index.rst  intro.txt
docs/_static/: custom.css
docs/api/: .buildinfo  api.html  changelog.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/api/.doctrees/: api.doctree  changelog.doctree  index.doctree
docs/api/_sources/: changelog.rst.txt  index.rst.txt
docs/api/_static/: documentation_options.js
examples/MultiZoneBackend/: routing.ipynb
examples/MultiZoneBackend/notebooks/: routing.ipynb
examples/MultiZoneBackend/scripts/sanity-checks/: MoveAcrossLinearArch.py
pytket/extensions/aqt/: __init__.py  extension_version.py  logger.py
pytket/extensions/aqt/backends/: __init__.py  aqt.py  aqt_api.py  aqt_job_data.py  aqt_multi_zone.py  config.py
pytket/extensions/aqt/backends/multi_zone_architecture/: architecture.py  macro_architechture_graph.py  named_architectures.py  zone_type.py
pytket/extensions/aqt/multi_zone_architecture/: __init__.py  architecture.py  architecture_portgraph.py  compilation_settings.py  macro_architechture_graph.py  macro_architecture_graph.py  named_architectures.py
pytket/extensions/aqt/multi_zone_architecture/circuit/: helpers.py  multizone_circuit.py
pytket/extensions/aqt/multi_zone_architecture/circuit_routing/: __init__.py  cut_kKaHyPar_sea20.ini  general_router.py  graph_partition_gate_selection.py  greedy_gate_selection.py  greedy_routing.py  helpers.py  km1_kKaHyPar_sea20.ini  partition_routing.py  qubit_tracker.py  route_circuit.py  route_circuit_v2.py  route_zones.py  router.py  routing_config.py  routing_ops.py  settings.py
pytket/extensions/aqt/multi_zone_architecture/depth_list/: __init__.py  depth_list.py
pytket/extensions/aqt/multi_zone_architecture/graph_algs/: __init__.py  graph.py  mt_kahypar.py  mt_kahypar_check.py
pytket/extensions/aqt/multi_zone_architecture/initial_placement/: initial_placement_generators.py  settings.py
pytket/extensions/aqt/multi_zone_architecture/trap_architecture/: architecture.py  architecture_portgraph.py  cost_model.py  dynamic_architecture.py  macro_architecture_graph.py  named_architectures.py
tests/: backend_test.py  convert_test.py  test-requirements.txt  zone_types_test.py
tests/multi_zone/: architecture_test.py  circuit_from_qasm_test.py  compilation_settings_test.py  dangling_single_qubit_circuit_test.py  ghz_circuit_test.py  large_circuit_test.py  large_examples_test.py  multi_zone_backend_test.py  multi_zone_circuit_test.py  test_from_qasm.py  zone_types_test.py
tests/multi_zone/circuits/: export_short_circuit.sh  google_sup.qasm  prethermalization.qasm  qaoa.qasm  qft.qasm  quadratic_form_clean.qasm  square_root_clean_new.qasm  two_local.qasm  unknown.qasm
tests/multi_zone/scaling_test/: gen_circuit.py  gen_p.py  print_circuit.py  test_from_qiskit.py
tests/multi_zone/scaling_test/circuits/: CE_2trotter_11.pkl  CE_2trotter_113.pkl  CE_2trotter_140.pkl  CE_2trotter_20.pkl  CE_2trotter_33.pkl  CE_2trotter_48.pkl  CE_2trotter_67.pkl  CE_2trotter_88.pkl  JW_2trotter_100.pkl  JW_2trotter_16.pkl  JW_2trotter_25.pkl  JW_2trotter_36.pkl  JW_2trotter_49.pkl  JW_2trotter_64.pkl  JW_2trotter_81.pkl  JW_2trotter_9.pkl
tests/multi_zone/scaling_test/result/mid_grid_False_greedy/: MoS2_CE_11.pkl  MoS2_CE_113.pkl  MoS2_CE_20.pkl  MoS2_CE_33.pkl  MoS2_CE_48.pkl  MoS2_CE_67.pkl  MoS2_CE_88.pkl  MoS2_JW_100.pkl  MoS2_JW_16.pkl  MoS2_JW_25.pkl  MoS2_JW_36.pkl  MoS2_JW_49.pkl  MoS2_JW_64.pkl  MoS2_JW_81.pkl  MoS2_JW_9.pkl  brickwork_1d_10.pkl  brickwork_1d_100.pkl  brickwork_1d_20.pkl  brickwork_1d_30.pkl  brickwork_1d_40.pkl  brickwork_1d_50.pkl  brickwork_1d_60.pkl  brickwork_1d_80.pkl  brickwork_2d_100.pkl  brickwork_2d_16.pkl  brickwork_2d_25.pkl  brickwork_2d_36.pkl  brickwork_2d_49.pkl  brickwork_2d_64.pkl  brickwork_2d_81.pkl  brickwork_2d_9.pkl  ghz_10.pkl  ghz_100.pkl  ghz_20.pkl  ghz_30.pkl  ghz_40.pkl  ghz_50.pkl  ghz_60.pkl  ghz_80.pkl  qft_10.pkl  (+39 more)
tests/multi_zone/scaling_test/result/mid_grid_False_partitioning/: MoS2_CE_11.pkl  MoS2_CE_113.pkl  MoS2_CE_20.pkl  MoS2_CE_33.pkl  MoS2_CE_48.pkl  MoS2_CE_67.pkl  MoS2_CE_88.pkl  MoS2_JW_100.pkl  MoS2_JW_16.pkl  MoS2_JW_25.pkl  MoS2_JW_36.pkl  MoS2_JW_49.pkl  MoS2_JW_64.pkl  MoS2_JW_81.pkl  MoS2_JW_9.pkl  brickwork_1d_10.pkl  brickwork_1d_100.pkl  brickwork_1d_20.pkl  brickwork_1d_30.pkl  brickwork_1d_40.pkl  brickwork_1d_50.pkl  brickwork_1d_60.pkl  brickwork_1d_80.pkl  brickwork_2d_100.pkl  brickwork_2d_16.pkl  brickwork_2d_25.pkl  brickwork_2d_36.pkl  brickwork_2d_49.pkl  brickwork_2d_64.pkl  brickwork_2d_81.pkl  brickwork_2d_9.pkl  ghz_10.pkl  ghz_100.pkl  ghz_20.pkl  ghz_30.pkl  ghz_40.pkl  ghz_50.pkl  ghz_60.pkl  ghz_80.pkl  qft_10.pkl  (+39 more)
tests/multi_zone/scaling_test/result/mid_grid_True_greedy/: MoS2_CE_11.pkl  MoS2_CE_113.pkl  MoS2_CE_20.pkl  MoS2_CE_33.pkl  MoS2_CE_48.pkl  MoS2_CE_67.pkl  MoS2_CE_88.pkl  MoS2_JW_100.pkl  MoS2_JW_16.pkl  MoS2_JW_25.pkl  MoS2_JW_36.pkl  MoS2_JW_49.pkl  MoS2_JW_64.pkl  MoS2_JW_81.pkl  MoS2_JW_9.pkl  brickwork_1d_10.pkl  brickwork_1d_100.pkl  brickwork_1d_20.pkl  brickwork_1d_30.pkl  brickwork_1d_40.pkl  brickwork_1d_50.pkl  brickwork_1d_60.pkl  brickwork_1d_80.pkl  brickwork_2d_100.pkl  brickwork_2d_16.pkl  brickwork_2d_25.pkl  brickwork_2d_36.pkl  brickwork_2d_49.pkl  brickwork_2d_64.pkl  ghz_10.pkl  (+49 more)
tests/multi_zone/short_circuits/: ghz_indep_tket_32_new.qasm  google_sup.qasm  prethermalization.qasm  qaoa.qasm  qft.qasm  quadratic_form_clean.qasm  square_root_clean_new.qasm  two_local.qasm  unknown.qasm
(+1157 files in other folders)
