[project]
name = "pytket-aqt"
dynamic = ["version"]
requires-python = ">=3.11,<4.0"

description = "Extension for pytket, TODOPYTKETEXT"
license = { file = "LICENSE" }
readme = "README.md"
authors = [
    { name = "TKET development team", email = "tket-support@quantinuum.com" }
]
maintainers = [
    { name = "TKET development team", email = "tket-support@quantinuum.com" },
]
classifiers = [
    "Environment :: Console",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "pytket >=2.10",
    "requests >=2.22",
    "types-requests",
    "pydantic >=2.0",
    "networkx >=3.0",
    "sympy >=1.6",
    "qiskit-aqt-provider >=1.10.0",
    "mtkahypar >=1.5; sys_platform != 'win32'",
    "numpy (>=2.3.4,<3.0.0)",
    "notebook (>=7.4.7,<8.0.0)",
    "types-networkx (>=3.5.0.20251106)",
]

[project.urls]
documentation = "https://tket.quantinuum.com/extensions/pytket-aqt/index.html"
source = "https://github.com/Quantinuum/pytket-aqt"
tracker = "https://github.com/Quantinuum/pytket-aqt/issues"

[tool.setuptools.packages]
find = {}

[tool.setuptools.dynamic]
version = {attr = "_metadata.__extension_version__"}

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.uv]
dev-dependencies = [
    "pytest >=8.3.2,<9",
    "pytest-timeout ~=2.4.0",
    "ruff >=0.6.2,<0.7",
    "mypy >=1.11.1,<2",
    "hypothesis >=6.111.1,<7",
    "pre-commit >=3.8.0,<4",
    "pyupgrade >=2.29,<4.0",
    "pytest-httpx",
    "requests_mock",
]
